--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,17 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+  download:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: download txt file
+      uses: actions/download-artifact@v2
+      with:
+        name: hello-artifacts
+        path: ./artifacts/hello.txt
+
+    - name: View the text file
+      run: cat ./artifacts/hello.txt
+
