--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -26,7 +26,7 @@ jobs:
     - name: download txt file
       uses: actions/download-artifact@v2
       with:
-        name: hello-artifacts
+        name: hello-artifact
         path: ./artifacts/hello.txt
 
     - name: View the text file
