--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -29,5 +29,5 @@ jobs:
         name: hello-artifact
 
     - name: View the text file
-      run: cat ./artifacts/hello.txt
+      run: ls ./artifacts
 
